Make it smaller

--- a/12000060.md
+++ b/12000060.md
@@ -4,4 +4,4 @@ The Average-Function is a [Mathematics-Function](12000060.md).
 
 ## Formula
 
-$$ Average(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} = \frac{x_1 + x_2 + .. + x_n}{n} $$
+$$ f(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} = \frac{x_1 + x_2 + .. + x_n}{n} $$
