--- a/21.md
+++ b/21.md
@@ -77,7 +77,7 @@ I respond, that this cannot be [The-Truth](600140.md), because for each [Contact
 
 She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because she is not bad at all in [Mathematics](13000000.md) and of course knows the following [Formula](13000025.md):
 
-$$ Average(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} = \frac{x_1 + x_2 + .. + x_n}{n} $$
+$$ f(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} = \frac{x_1 + x_2 + .. + x_n}{n} $$
 
 After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md), who seem to me not so experienced in [Theory](7000001.md) and therefore I try to explain also them as simple as possible, why [Men](40080022.md) *really* do *not* have more [Fun](60170.md) than [Women](40000010.md).
 
