Apply big Re-Work

--- a/21.md
+++ b/21.md
@@ -75,32 +75,42 @@ Yesterday I had an [Argument](600151.md) about [Justice](600052.md) with my [My-
 
 I respond, that this cannot be [The-Truth](600140.md), because for each [Contact](40000015.md) we normally have exactly one [Woman](40000010.md) and one [Man](40080022.md), so in total each [Group](180000000.md) must have the same [Number](60000.md) of [Contacts](40000015.md).
 
-She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because she is not bad at all in [Mathematics](13000000.md) and of course knows the following [Formula](13000025.md):
+She pretends to me to not have understood my [Argumentation](600176.md), which of course cannot be [The-Truth](600140.md), because she is not bad at all in [Mathematics](13000000.md) and of course knows the [Formula](13000025.md) for the [Average-Ratio](12000060.md):
 
 $$ Average(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} $$
 $$ = \frac{x_1 + x_2 + .. + x_n}{n} $$
 
 After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md), who seem to me not so experienced in [Theory](7000001.md) and therefore I try to explain also them as simple as possible, why [Men](40080022.md) *really* do *not* have more [Fun](60170.md) than [Women](40000010.md).
 
-So let's assume we have a [Micro-Universe](10000027.md) with only two Men **M1/M2** and two Women **W1/W2**, where **M1** has two Contacts with each of **W1/W2**, whereas **M2** has Zero-Contacts, then we can calculate the [Average-Ratio](12000060.md) **Women_per_Men** as Follows:
+So let's assume we have a [Micro-Universe](10000027.md) with only two Men _M1/M2_ and two Women _W1/W2_, where _M1_ has two Contacts with each of _W1/W2_, whereas _M2_ has Zero-Contacts.
 
-$$ \mathrm{Women\_for\_M1} = 2 $$
-$$ \mathrm{Women\_for\_M2} = 0 $$
-$$ \mathrm{Number\_of\_Contacts} = 2 $$
+Because each of the two Women have one Time Fun with _M1_ the [Variables](13000042.md) for the [Function](13000011.md) have the following [Values](700030.md):
 
-$$ \mathrm{Women\_per\_Men} = \frac{\mathrm{Women\_for\_M1} + \mathrm{Women\_for\_M2}}{\mathrm{Number\_of\_Contacts}} $$
-$$ = \frac{2 + 0}{2} = \frac{2}{2} = 1 $$
+$$ x_1 = Fun\_Count\_W1 = 1 $$
+$$ x_2 = Fun\_Count\_W2 = 1 $$
+$$ n = Women\_Count = 2 $$
 
-So on Average each Man has one female Contact - But now let's see, if Women *really* have an Advantage here:
+Then we can calculate the _Fun_Count_per_Woman_ as Follows:
 
-$$ \mathrm{Men\_for\_W1} = 1 $$
-$$ \mathrm{Men\_for\_W2} = 1 $$
-$$ \mathrm{Number\_of\_Contacts} = 2 $$
+$$ Fun\_Count\_per\_Woman = Average(x_1,x_2) $$
+$$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
 
-$$ \mathrm{Men\_per\_Women} = \frac{\mathrm{Men\_for\_W1} + \mathrm{Men\_for\_W2}}{\mathrm{Number\_of\_Contacts}} $$
-$$ = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
+So on Average each Woman has one Time Fun - But now let's see, if Men *really* have more Fun, like my Friend claimed, so let's define first again the Variables:
 
-Tada, $\mathrm{Women\_per\_Men} = \mathrm{Men\_per\_Women}$ and who was right again? But I have to admit, that though in [Theory](7000001.md) this looks like mathematic [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Loneliness](14000003.md) for **M2** and (maybe too much) hard [Work](60036.md) for **M1**:
+$$ x_1 = Fun\_Count\_M1 = 2 $$
+$$ x_2 = Fun\_Count\_M2 = 0 $$
+$$ n = Men\_Count = 2 $$
+
+Analogous to just now we now can also calculate the _Fun_Count_per_Men_ as Follows:
+
+$$ Fun\_Count\_per\_Man = Average(x_1,x_2) $$
+$$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{2 + 0}{2} = \frac{2}{2} = 1 $$
+
+So for both Calculations the Reslut is One and therefore I proved my Hypothesis:
+
+$$ Fun\_Count\_per\_Woman = Fun\_Count\_per\_Man $$
+
+But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) for _M1_:
 
 ![Unbalanced Universe](400000153.png)
 
