Imrpove Formatting and Wording

--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ $$ n = Women\_Count = 2 $$
 
 Then we can calculate the _Fun_Count_per_Woman_ as Follows:
 
-$$ Fun\_Count\_per\_Woman = Average(x_1,x_2) $$
+$$ Fun\_per\_Woman = Average(x_1,x_2) $$
 $$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
 
 So on Average each Woman has one Time Fun - But now let's see, if Men *really* have more Fun, like my Friend claimed, so let's define first again the Variables:
@@ -101,16 +101,16 @@ $$ x_1 = Fun\_Count\_M1 = 2 $$
 $$ x_2 = Fun\_Count\_M2 = 0 $$
 $$ n = Men\_Count = 2 $$
 
-Analogous to just now we now can also calculate the _Fun_Count_per_Men_ as Follows:
+Analogous to just now we now can also calculate the _Fun_per_Men_ as Follows:
 
-$$ Fun\_Count\_per\_Man = Average(x_1,x_2) $$
+$$ Fun\_per\_Man = Average(x_1,x_2) $$
 $$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{2 + 0}{2} = \frac{2}{2} = 1 $$
 
 So for both Calculations the Reslut is One and therefore I proved my Hypothesis:
 
-$$ Fun\_Count\_per\_Woman = Fun\_Count\_per\_Man $$
+$$ Fun\_per\_Woman = Fun\_per\_Man $$
 
-But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) for _M1_:
+But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
 
 ![Unbalanced Universe](400000153.png)
 
