--- a/21.md
+++ b/21.md
@@ -90,7 +90,7 @@ $$ x_1 = Fun\_Count\_W1 = 1 $$
 $$ x_2 = Fun\_Count\_W2 = 1 $$
 $$ n = Women\_Count = 2 $$
 
-Then we can calculate the _Fun_Count_per_Woman_ as Follows:
+Then we can calculate _Fun_per_Woman_ as Follows:
 
 $$ Fun\_per\_Woman = Average(x_1,x_2) $$
 $$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{1 + 1}{2} = \frac{2}{2} = 1 $$
@@ -106,7 +106,7 @@ Analogous to just now we now can also calculate the _Fun_per_Men_ as Follows:
 $$ Fun\_per\_Man = Average(x_1,x_2) $$
 $$ =  \frac{\sum\limits_{i=1}^{2}{x_i}}{2} = \frac{x_1 + x_2}{2} = \frac{2 + 0}{2} = \frac{2}{2} = 1 $$
 
-So for both Calculations the Reslut is One and therefore I proved my Hypothesis:
+So for both Calculations the Result is One and therefore I proved my Hypothesis:
 
 $$ Fun\_per\_Woman = Fun\_per\_Man $$
 
