--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ She pretends to me to not have understood my [Argumentation](600176.md), which o
 $$ Average(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} $$
 $$ = \frac{x_1 + x_2 + .. + x_n}{n} $$
 
-After a Walk in [Harmony](60100.md) with [Soey](142000001.md), the next Day I meet [Sarah](151000002.md) together with her [Father](40000007.md), who does not seem to be very experienced in [Theory](7000001.md) and therefore I try to explain also him as simple as possible, why [Men](40080022.md) and [Women](40000010.md) are equal regarding [Fun-Contacts](60170.md).
+The next Day, after a Walk with [Soey](142000001.md), I meet [Sarah](151000002.md) together with her [Father](40000007.md). Both look like rather inexperienced [Mathematicians](80000002.md) to me and therefore I try to explain them as simple as possible, why [Men](40080022.md) and [Women](40000010.md) are equal regarding [Fun-Contacts](60170.md).
 
 So let's assume we have a [Micro-Universe](10000027.md) with only two Men _M1/M2_ and two Women _W1/W2_, where _M1_ has two Contacts with each of _W1/W2_, whereas _M2_ has Zero-Contacts.
 
