--- a/21.md
+++ b/21.md
@@ -110,7 +110,7 @@ So for both Calculations the Result is One and therefore I proved my Hypothesis:
 
 $$ Fun\_per\_Woman = Fun\_per\_Man $$
 
-But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
+But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to *real* [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
 
 ![Unbalanced Universe](400000153.png)
 
