--- a/12000060.md
+++ b/12000060.md
@@ -6,3 +6,13 @@ The Average-Function is a [Mathematics-Function](12000060.md).
 
 $$ Average(x_1,x_2 ..\:x_n) = \frac{\sum\limits_{i=1}^{n}{x_i}}{n} $$
 $$ = \frac{x_1 + x_2 + .. + x_n}{n} $$
+
+## Python
+
+```python
+def Average(X1_Xn):
+	Sum = 0
+	for Xi in X1_Xn:
+		Sum += Xi
+	return Sum / len(X1_Xn)
+```
