--- a/21.md
+++ b/21.md
@@ -110,6 +110,37 @@ So for both Calculations the Result is One and therefore I proved my Hypothesis:
 
 $$ Fun\_per\_Woman = Fun\_per\_Man $$
 
+To verify [The-Truth](600140.md) even more, we can also write a little [Python](9010003.md)-Program "Men-Women-Fun.py":
+
+```python
+def Average(X1_Xn_List):
+	Sum = 0
+	for Xi in X1_Xn_List:
+		Sum += Xi
+	return Sum / len(X1_Xn_List)
+
+def Average_for_Women():
+	Fun_Count_W1 = 1
+	Fun_Count_W2 = 1
+	return Average([Fun_Count_W1, Fun_Count_W2])
+
+def Average_for_Men():
+	Fun_Count_M1 = 2
+	Fun_Count_M2 = 0
+	return Average([Fun_Count_M1, Fun_Count_M2])
+
+print(f'Avarage for Women: {Average_for_Women()}')
+print(f'Avarage for Men  : {Average_for_Men()}')
+```
+
+If we run the Program, we get the correct Result:
+
+```bash
+$ python3 Men-Women-Fun.py
+Avarage for Women: 1.0
+Avarage for Men  : 1.0
+```
+
 But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to *real* [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
 
 ![Unbalanced Universe](400000153.png)
