--- a/21.md
+++ b/21.md
@@ -133,7 +133,7 @@ print(f'Avarage for Women: {Average_for_Women()}')
 print(f'Avarage for Men  : {Average_for_Men()}')
 ```
 
-If we run the Program, we get the correct Result:
+If we run the Program, we also get the correct Result:
 
 ```bash
 $ python3 Men-Women-Fun.py
