Make it more consistent

--- a/12000060.md
+++ b/12000060.md
@@ -10,9 +10,9 @@ $$ = \frac{x_1 + x_2 + .. + x_n}{n} $$
 ## Python
 
 ```python
-def Average(X1_Xn_List):
+def Average(X1_X2_Xn_List):
 	Sum = 0
-	for Xi in X1_Xn_List:
+	for Xi in X1_X2_Xn_List:
 		Sum += Xi
-	return Sum / len(X1_Xn_List)
+	return Sum / len(X1_X2_Xn_List)
 ```
