--- a/21.md
+++ b/21.md
@@ -113,11 +113,11 @@ $$ Fun\_per\_Woman = Fun\_per\_Man $$
 To verify [The-Truth](600140.md) even more, we can also write a little [Python](9010003.md)-Program "Men-Women-Fun.py":
 
 ```python
-def Average(X1_Xn_List):
+def Average(X1_X2_Xn_List):
 	Sum = 0
-	for Xi in X1_Xn_List:
+	for Xi in X1_X2_Xn_List:
 		Sum += Xi
-	return Sum / len(X1_Xn_List)
+	return Sum / len(X1_X2_Xn_List)
 
 def Average_for_Women():
 	Fun_Count_W1 = 1
