Make it more clear

--- a/12000060.md
+++ b/12000060.md
@@ -12,7 +12,8 @@ $$ = \frac{x_1 + x_2 + .. + x_n}{n} $$
 ```python
 def Average(X1_X2_Xn_List):
 	Sum = 0
+	List_Count = len(X1_X2_Xn_List)
 	for Xi in X1_X2_Xn_List:
 		Sum += Xi
-	return Sum / len(X1_X2_Xn_List)
+	return Sum / List_Count
 ```
