--- a/21.md
+++ b/21.md
@@ -110,25 +110,37 @@ So for both Calculations the Result is One and therefore I proved my Hypothesis:
 
 $$ Fun\_per\_Woman = Fun\_per\_Man $$
 
-To verify [The-Truth](600140.md) even more, we can also write a little [Python](9010003.md)-Program "Men-Women-Fun.py":
+To verify [The-Truth](600140.md) even more, we can also write a little [Python](9010003.md)-Program "Men-Women-Fun.py", where we first define the [Average-Function](12000060.md):
 
 ```python
 def Average(X1_X2_Xn_List):
 	Sum = 0
+	List_Count = len(X1_X2_Xn_List)
 	for Xi in X1_X2_Xn_List:
 		Sum += Xi
-	return Sum / len(X1_X2_Xn_List)
+	return Sum / List_Count
+```
 
+Then we write a Function for the Women&nbsp;...
+
+```python
 def Average_for_Women():
 	Fun_Count_W1 = 1
 	Fun_Count_W2 = 1
 	return Average([Fun_Count_W1, Fun_Count_W2])
+```
+... and finally the Same for the Men:
 
+```python
 def Average_for_Men():
 	Fun_Count_M1 = 2
 	Fun_Count_M2 = 0
 	return Average([Fun_Count_M1, Fun_Count_M2])
+```
 
+At the End we call our two Men/Women-Functions:
+
+```python
 print(f'Avarage for Women: {Average_for_Women()}')
 print(f'Avarage for Men  : {Average_for_Men()}')
 ```
