Fix Typos and make it more clear

--- a/21.md
+++ b/21.md
@@ -141,16 +141,16 @@ def Average_for_Men():
 At the End we call our two Men/Women-Functions:
 
 ```python
-print(f'Avarage for Women: {Average_for_Women()}')
-print(f'Avarage for Men  : {Average_for_Men()}')
+print("Average for Women: " + str(Average_for_Women()))
+print("Average for Men  : " + str(Average_for_Men()))
 ```
 
 If we run the Program, we also get the correct Result:
 
 ```bash
 $ python3 Men-Women-Fun.py
-Avarage for Women: 1.0
-Avarage for Men  : 1.0
+Average for Women: 1.0
+Average for Men  : 1.0
 ```
 
 But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to *real* [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
