--- a/21.md
+++ b/21.md
@@ -110,7 +110,7 @@ So for both Calculations the Result is One and therefore I proved my Hypothesis:
 
 $$ Fun\_per\_Woman = Fun\_per\_Man $$
 
-To verify [The-Truth](600140.md) even more, we can also write a little [Python](9010003.md)-Program "Men-Women-Fun.py", where we first define the [Average-Function](12000060.md):
+To verify [The-Truth](600140.md) even more, we can write a little [Python](9010003.md)-Program "Men-Women-Fun.py", where we first define the [Average-Function](12000060.md):
 
 ```python
 def Average(X1_X2_Xn_List):
