Make it more clear

--- a/21.md
+++ b/21.md
@@ -153,6 +153,14 @@ Average for Women: 1.0
 Average for Men  : 1.0
 ```
 
+I think Everybody agrees that we now answered by Means of [Mathematics](13000000.md) and [Informatics](9000000.md) the simple [Binary-Question](600138.md):
+
+> Have Men and Women the same Amount of Fun-Contacts?
+
+And the simple Answer is:
+
+> Yes!
+
 But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to *real* [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
 
 ![Unbalanced Universe](400000153.png)
