--- a/21.md
+++ b/21.md
@@ -161,7 +161,7 @@ And the simple Answer is:
 
 > Yes!
 
-But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution could lead to *real* [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
+But I have to admit, that though in [Theory](7000001.md) this looks like [Correctness](600077.md), nevertheless in [Reality](40000.md) the unbalanced Distribution can lead to *real* [Problems](600029.md), like [Loneliness](14000003.md) for _M2_ or [Overload](600177.md) of _M1_:
 
 ![Unbalanced Universe](400000153.png)
 
