--- a/21.md
+++ b/21.md
@@ -157,7 +157,7 @@ I think Everybody agrees that we now answered by Means of [Mathematics](13000000
 
 > Have Men and Women the same Amount of Fun-Contacts?
 
-And the simple Answer is:
+And the simple [Answer](600139.md) is:
 
 > Yes!
 
