Use Citation instead of Code-Block

--- a/21.md
+++ b/21.md
@@ -1205,17 +1205,15 @@ At least now she is already a good [Trainer](60078.md) for me ;-)
 
 I get an E-Mail with the following Content:
 
-```
-Sehr geehrte(r) Kundin/Kunde,
-
-wir konnten Ihren verlorenen Gegenstand bis heute nicht finden. Die Erfahrung zeigt uns, dass verlorengegangene Gegenstände, welche nicht innerhalb von 10 Tagen gefunden werden, oftmals definitiv verloren sind.
-
-Sollten wir dennoch Ihren Gegenstand finden, welcher der von Ihnen abgegebenen Beschreibung entspricht, informieren wir Sie umgehend.
-
-Mit freundlichen Grüßen
-
-DB Station&Service AG
-```
+> Sehr geehrte(r) Kundin/Kunde,
+>
+> wir konnten Ihren verlorenen Gegenstand bis heute nicht finden. Die Erfahrung zeigt uns, dass verlorengegangene Gegenstände, welche nicht innerhalb von 10 Tagen gefunden werden, oftmals definitiv verloren sind.
+>
+> Sollten wir dennoch Ihren Gegenstand finden, welcher der von Ihnen abgegebenen Beschreibung entspricht, informieren wir Sie umgehend.
+>
+> Mit freundlichen Grüßen
+>
+> DB Station&Service AG
 
 #### Blog-Chain-Time 2023.04.17-17:10 in Tübingen <a id="2502"/>
 ###### Topics: Nicole, Women, Smoking
