Use Citation instead of Code-Block

--- a/21.md
+++ b/21.md
@@ -1104,14 +1104,12 @@ When I arrived at [my](2010008.md) [Butchers-Shop](200000005.md), it was closed.
 
 On my Morning-Walk to Clash-of-Clans, I see the following Message:
 
-```
-Der Anführer dieses Clans ist seit mehr als 60 Tagen nich mehr aktiv. Die Position
-des Anführers wirh in 30 Tagen an den höchstrangigen Spieler übergeben, der am
-längsten Mitglied des Clans ist. Damit seine Position nicht vergeben wird, muss
-sich der Anführer melden.
-
-Derzeit wird die Anführerschaft an Holyheu übertragen.
-```
+> Der Anführer dieses Clans ist seit mehr als 60 Tagen nich mehr aktiv. Die Position
+> des Anführers wirh in 30 Tagen an den höchstrangigen Spieler übergeben, der am
+> längsten Mitglied des Clans ist. Damit seine Position nicht vergeben wird, muss
+> sich der Anführer melden.
+>
+> Derzeit wird die Anführerschaft an Holyheu übertragen.
 
 In the Internet then I find an [Explanation](60014.md) [[0]](#3951) for this [Problem](600029.md).
 
