--- a/300050002.md
+++ b/300050002.md
@@ -22,8 +22,8 @@ The [Local-Web-App](404.md) provides simple [Solution](600024.md) for the [Probl
 
 To achieve this [Goal](60058.md) the following existing [Technologies](60044.md) are used:
 
-- Inline [Css](9000135.md)-Files.
-- Inline [Java-Script](9010007.md)-Files.
+- Inline [Css](9000135.md)-Files for Styling the App.
+- Inline [Java-Script](9010007.md)-Files for Programming the App.
 - Inline all Kinds of [Media-Files](30010000.md), like [Mp3](30010008.md), [Jpg](30010004.md) or [Mp4](30010009.md), by using [Encodings](60079.md) like [Base-64](404.md).
 - Inline Data-Description-Files, like [Json](404.md) or [Xml](404.md), as [Configuration-Files](9000173.md) for the [App](9000168.md).
 
