--- a/300050002.md
+++ b/300050002.md
@@ -6,7 +6,7 @@ Status: <font color="red">Draft</font>
 
 ## Abstract <a id="1600"/>
 
-This Patent describes the [Local-Web-App](404.md), whicht can easily installed and run on all [Devices](20000000.md) that provide a [Web-Browser](9000128.md) with [Java-Script](9010007.md) Support.
+This Patent describes the [Local-Web-App](300050003.md), whicht can easily installed and run on all [Devices](20000000.md) that provide a [Web-Browser](9000128.md) with [Java-Script](9010007.md) Support.
 
 ## Problem <a id="1100"/>
 
@@ -18,7 +18,7 @@ To make Matters worse, [Developers]() have to learn *different* [Programming-Lan
 
 To solve this [Problems](600029.md) there are several [Mulit-Platform](404.md)-Sulutions, like [Kivy](9000166.md), [Flutter](9000181.md) or [Unity](9000180.md), which try their Best to make the [Life](60064.md) of [Developers](404.md) easier, with more or less [Success](60139.md).
 
-The [Local-Web-App](404.md) provides simple [Solution](600024.md) for the [Problem](600029.md) by using a single [Html-File](9000134.md), where all required [Data](60001.md) is inlined.
+The [Local-Web-App](300050003.md) provides simple [Solution](600024.md) for the [Problem](600029.md) by using a single [Html-File](9000134.md), where all required [Data](60001.md) is inlined.
 
 To achieve this [Goal](60058.md) the following existing [Technologies](60044.md) are used:
 
