--- a/2000223.md
+++ b/2000223.md
@@ -1,3 +1,3 @@
 # Web-App
 
-A Web-App is an [App](9000168.md), that used [Web-Technology](2000222.md).
+A Web-App is an [App](9000168.md), that uses [Web-Technology](2000222.md).
