--- a/300050002.md
+++ b/300050002.md
@@ -6,13 +6,13 @@ Status: <font color="red">Draft</font>
 
 ## Abstract <a id="1600"/>
 
-This Patent describes the [Local-Web-App](300050003.md), whicht can easily installed and run on all [Devices](20000000.md) that provide a [Web-Browser](9000128.md) with [Java-Script](9010007.md) Support.
+This Patent describes the [Local-Web-App](300050003.md), which can easily installed and run on all [Devices](20000000.md) that provide a [Web-Browser](9000128.md) with [Java-Script](9010007.md) Support.
 
 ## Problem <a id="1100"/>
 
-Currently the [Providers](600086.md) of [Computers](20000003.md) and [Smart-Phones](20000005.md), like [Google](240000009.md), [Apple](240000003.md) or [Amazon](240000004.md), are very restrictive, which [Apps](9000168.md) are allowed to be installed. Different [App-Stores](404.md) are used where where high [Fees](404.md) are charged in some Cases.
+Currently the [Providers](600086.md) of [Computers](20000003.md) and [Smart-Phones](20000005.md), like [Google](240000009.md), [Apple](240000003.md) or [Amazon](240000004.md), are very restrictive, which [Apps](9000168.md) are allowed to be installed. Different [App-Stores](404.md) are used, where high [Fees](404.md) are charged in many Cases.
 
-To make Matters worse, [Developers]() have to learn *different* [Programming-Languages](9010000.md), like [Java](9010007.md) or [Swift](404.md) and develop their [Apps](9000168.md) multiple times.
+To make Matters worse, [Developers](404.md) have to learn *different* [Programming-Languages](9010000.md), like [Java](9010007.md) or [Swift](404.md) and develop their [Apps](9000168.md) multiple times.
 
 ## Solution <a id="1200"/>
 
