--- a/300050002.md
+++ b/300050002.md
@@ -24,12 +24,13 @@ To achieve this [Goal](60058.md) the following existing [Technologies](60044.md)
 
 - Inline [Css](9000135.md)-Files for Styling the App.
 - Inline [Java-Script](9010007.md)-Files for Programming the App.
-- Inline all Kinds of [Media-Files](30010000.md), like [Mp3](30010008.md), [Jpg](30010004.md) or [Mp4](30010009.md), by using [Encodings](60079.md) like [Base-64](404.md).
+- Inline all Kinds of [Binary-Files](404.md) and [Media-Files](30010000.md), like [Mp3](30010008.md), [Jpg](30010004.md) or [Mp4](30010009.md), by using [Encodings](60079.md) like [Base-64](404.md).
 - Inline Data-Description-Files, like [Json](404.md) or [Xml](404.md), as [Configuration-Files](9000173.md) for the [App](9000168.md).
+- Save [State](60069.md)-Information using [Local-Web-Storage](404.md).
 
-This all together allows to provide a single [Html-File](9000134.md) that can downloaded on almost every [Device](20000000.md).
+This all together allows to provide a single [Html-File](9000134.md) that can downloaded on almost every [Device](20000000.md) while providing a high Amount of [User-Friendliness](404.md).
 
-Because it is a single File this provides a high Amount of [User-Friendliness](404.md) and because all required Data is stored on [Local-File-Systems](9000025.md) the App can be used without [Network-Connection](404.md), which also saves [Bandwidth](404.md) and [Energy](10000009.md), which as a Result reduces [Environment-Pollution](290000000.md).
+Because all required Data is stored on a [Local-File-System](9000025.md) the [App](9000168.md) can be used without [Network-Connection](404.md), which saves [Bandwidth](404.md)/[Energy](10000009.md) and as a Result reduces [Environment-Pollution](290000000.md).
 
 ## Known Technologies <a id="1700"/>
 
