--- a/9200012.md
+++ b/9200012.md
@@ -1,3 +1,7 @@
 # Extensible-Markup-Language
 
 The Extensible-Markup-Language is a [Markup-Language](9300000.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/XML)
