--- a/9010007.md
+++ b/9010007.md
@@ -1,3 +1,7 @@
 # Java-Script-Programming-Language
 
 The Java-Script-Programming-Language is a [Programming-Language](9010000.md) for [Web-Design](2000209.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/JavaScript)
