Add Definition and Link

--- a/9000135.md
+++ b/9000135.md
@@ -1,3 +1,7 @@
 # Cascading-Style-Sheets
 
-Cascading-Style-Sheets are ...
+Cascading-Style-Sheets is a [Web-Technology](2000222.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/CSS)
