--- a/300050002.md
+++ b/300050002.md
@@ -24,7 +24,7 @@ To achieve this [Goal](60058.md) the following existing [Technologies](60044.md)
 
 - Inline [Css](9000135.md)-Files for Styling the App.
 - Inline [Java-Script](9010007.md)-Files for Programming the App.
-- Inline all Kinds of [Binary-Files](404.md) and [Media-Files](30010000.md), like [Mp3](30010008.md), [Jpg](30010004.md) or [Mp4](30010009.md), by using [Encodings](60079.md) like [Base-64](404.md).
+- Inline all Kinds of [Binary-Files](404.md) and [Media-Files](30010000.md), like [Mp3](30010008.md), [Jpg](30010004.md) or [Mp4](30010009.md), by using [Encodings](60079.md) like [Base-64](2000226.md).
 - Inline [Configuration-Files](9000173.md), like [Json](9200013.md)- or [Xml](9200012.md)-Files.
 - Save [State](60069.md)-Information using [Local-Web-Storage](2000224.md).
 
