Add Multi-File Solution

--- a/300050002.md
+++ b/300050002.md
@@ -16,9 +16,11 @@ To make Matters worse, [Developers](404.md) have to learn *different* [Programmi
 
 ## Solution <a id="1200"/>
 
+### Single-File <a id="1210"/>
+
 To solve this [Problems](600029.md) there are several [Mulit-Platform](404.md)-Sulutions, like [Kivy](9000166.md), [Flutter](9000181.md) or [Unity](9000180.md), which try their Best to make the [Life](60064.md) of [Developers](404.md) easier, with more or less [Success](60139.md).
 
-The [Local-Web-App](300050003.md) provides simple [Solution](600024.md) for the [Problem](600029.md) by using a single [Html-File](9000134.md), where all required [Data](60001.md) is inlined.
+The [Local-Web-App](300050003.md) provides a simple [Solution](600024.md) for the [Problem](600029.md) by using a single [Html-File](9000134.md), where all required [Data](60001.md) is inlined.
 
 To achieve this [Goal](60058.md) the following existing [Technologies](60044.md) are used:
 
@@ -31,6 +33,12 @@ To achieve this [Goal](60058.md) the following existing [Technologies](60044.md)
 This all together allows to provide a single [Html-File](9000134.md) that can downloaded on almost every [Device](20000000.md) while providing a high Amount of [User-Friendliness](404.md).
 
 Because all required Data is stored on a [Local-File-System](9000025.md) the [App](9000168.md) can be used without [Network-Connection](404.md), which saves [Bandwidth](404.md)/[Energy](10000009.md) and as a Result reduces [Environment-Pollution](290000000.md).
+
+### Multi-File <a id="1220"/>
+
+Of course it is also possible to use multiple Files for the [Local-Web-App](300050003.md), which has the [Advantage](60172.md) that for [Updates](600131.md) only the changed [Files](9000007.md) have to be downloaded from the [Server](404.md).
+
+But for the Time being the [Providers](600086.md) make the [Realization](600033.md) of this [Concept](600011.md) quite difficult, though not impossible.
 
 ## Known Technologies <a id="1700"/>
 
