Add Description and Link

--- a/9010004.md
+++ b/9010004.md
@@ -1,3 +1,7 @@
 # Java-Programming-Language
 
-The Java-Programming-Language is ...
+The Java-Programming-Language is a [Programming-Language](9010000.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Java_(programming_language))
