--- a/300050002.md
+++ b/300050002.md
@@ -12,7 +12,7 @@ This Patent describes the [Local-Web-App](300050003.md), which can easily instal
 
 Currently the [Providers](600086.md) of [Computers](20000003.md) and [Smart-Phones](20000005.md), like [Google](240000009.md), [Apple](240000003.md) or [Amazon](240000004.md), are very restrictive, which [Apps](9000168.md) are allowed to be installed. Different [App-Stores](2000225.md) are used, where high [Fees](404.md) are charged in many Cases.
 
-To make Matters worse, [Developers](404.md) have to learn *different* [Programming-Languages](9010000.md), like [Java](9010007.md) or [Swift](404.md) and develop their [Apps](9000168.md) multiple times.
+To make Matters worse, [Developers](404.md) have to learn *different* [Programming-Languages](9010000.md), like [Java](9010007.md) or [Swift](9010009.md) and develop their [Apps](9000168.md) multiple times.
 
 ## Solution <a id="1200"/>
 
