--- a/2000228.md
+++ b/2000228.md
@@ -1,6 +1,6 @@
 # Google-Drive
 
-Google-Drive is [Web-Storage](404.md) from [Google](240000009.md).
+Google-Drive is [Web-Storage](2000229.md) from [Google](240000009.md).
 
 ## Links
 
