--- a/23.md
+++ b/23.md
@@ -2,6 +2,7 @@
 
 ## Table of Contents <a id="1"/>
 
+- [Day-116](#16000) Local-Web-App
 - [Day-112](#12000) Theory vs. Reality
 - [Day-109](#10900) The Don't-Waste-App
 - [Day-108](#10800) Bausparen with Friends
@@ -62,6 +63,22 @@
 - [Day-5](#500) First Concepts
 - [Day-4](#400) Big "Cleanup"
 - [Day-3](#300) A nasty Egg
+
+## Day-116: Local-Web-App <a id="16000"/>
+
+#### Blog-Chain-Time 2023.10.30-00:27 in Tübingen  <a id="16001"/>
+###### Topics: Technology, Local-Web-App
+
+As the informed Follower of the [Dings-Project](300000006.md) knows, I already experienced with different Technologies [[0](#16050),[1](#1651)] to implement [Apps](9000168.md) that runs on various [Comuter-Systems](9000153.md).
+
+For the Program [Noch-und-noch-nicht-fertig-werden](2010035.md) of the [Ernst-Bloch-Chor](2010013.md) my [Choir-Friend](1971091160.md) has prepared with [Musecore](2000227.md) many [Mp3](30010008.md)-Files for [Learning](600127.md) in the different [Vocal-Groups](90000043.md).
+
+Since in our Choir most of the Members are not very experienced with Computers, my Plan is to make the the Life as easy as possible and therefore I upload the Partitions together with the Mp3-Files to [Google-Drive](2000228.md).
+
+## Footnotes
+
+[<a id="16050"/>0] [Kivy on iOS and Windows](#6100)
+[<a id="16051"/>1] [Kivy on Android](#6000)
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
