--- a/23.md
+++ b/23.md
@@ -69,9 +69,9 @@
 #### Blog-Chain-Time 2023.10.30-00:27 in Tübingen  <a id="16001"/>
 ###### Topics: Ernst-Bloch-Choir, Local-Web-App
 
-As the informed Follower of the [Dings-Project](300000006.md) knows, I already experienced with different Technologies [[0](#16050),[1](#1651)] to implement [Apps](9000168.md) that runs on various [Comuter-Systems](9000153.md).
+As the informed Follower of the [Dings-Project](300000006.md) knows, I already experienced with different Technologies [[0](#16050),[1](#1651)] to implement [Apps](9000168.md) that runs on various [Computer-Systems](9000153.md).
 
-For the Program [Noch-und-noch-nicht-fertig-werden](2010035.md) of the [Ernst-Bloch-Chor](2010013.md) my [Choir-Friend](1971091160.md) has prepared with [Musecore](2000227.md) many [Mp3](30010008.md)-Files for [Learning](600127.md) in the different [Vocal-Groups](90000043.md).
+For our Program [Noch-und-noch-nicht-fertig-werden](2010035.md) my [Choir-Friend](1971091160.md) has prepared with [Musecore](2000227.md) many [Mp3](30010008.md)-Files for the [Learning](600127.md) in the different [Vocal-Groups](90000043.md).
 
 Since in our Choir most of the Members are not very experienced with Computers and some of them are already overwhelmed by the Download form our [Ernst-Bloch-Web-Site](2010013.md), in Order to make [Easy-Life](60173.md) with [Computers](20000003.md) possible, I upload the [Scores](90000018.md) together with the Mp3-Files to [Google-Drive](2000228.md).
 
@@ -79,19 +79,19 @@ To save Bandwidth, [Time](10000002.md), [Money](6666.md) and [Energy](10000040.m
 
 ![Save Engergy!](400000155.png)
 
-Though this looks like an acceptable [Solution](600024.md), nevertheless [My-Bass-Colleague](1971091168.md), who is also our Web-Master, points out to me that my [Sorting](600090.md) by Songs might be suboptimal.
+Though this looks like an acceptable [Solution](600024.md), nevertheless [My-Bass-Colleague](1971091168.md), who is also our Web-Master, points out to me, that [Sorting](600090.md) by [Vocal-Groups](90000043.md) might meet more the [User](9000141.md)-Needs.
 
-This brings me to the [Idea](600012.md) again to write an [App](9000168.md), where the Files can be sorted according different [Criterias](60137.md) like [Song-Title](700044.md) or [Voice-Group](90000043.md).
+This brings me to the [Idea](600012.md) (again) to write an [App](9000168.md), where the Files can be sorted according different [Criterias](60137.md) like [Song-Title](700044.md) or [Voice-Group](90000043.md).
 
-But this Time I want to write a *real* Multi-Platform-App, that *really* runs on *every* [Computer-Device](9000153.md). I had the [Idea](600012.md) already half a Year ago to use [Java-Script](9010007.md) and include all Data into a single [Html-File](9000134.md), which then can be downloaded to [Local-Storage](2000230.md) and then be run in a [Web-Browser](9000128.md).
+But this Time I want to write a *real* Multi-Platform-App, that *really* runs on *every* [Computer-Device](9000153.md). I had the [Idea](600012.md) already half a Year ago to use [Java-Script](9010007.md) and include all Data into a single [Html-File](9000134.md), which *easily* can be downloaded to [Local-Storage](2000230.md) and then be run in *every* [Web-Browser](9000128.md).
 
-I want to use a single File, because Goolge and Apple make it really hard for the User to install local Web-Sites with mulitple Files on their [Smart-Phones]() or [Tablets]().
+I want to use a single File, because [Goolge](240000009.md) and [Apple](240000003.md) make it really hard for the User to install local Web-Sites with mulitple Files on their [Smart-Phones](20000005.md) or [Tablets](20000007.md)&nbsp;-&nbsp;"Honi soit qui mal y pense".
 
-Though this sounds somehow obvious, up to now I never heard of such Kind of Apps and therefore&nbsp;-&nbsp;just to be sure&nbsp;-&nbsp;I document the [Idea](600012.md) again [[2]](#16052) as a [Dings-Patent](300000030.md) with the Name [Local-Web-App-Patent](300050002.md).
+Though this sounds somehow obvious, up to now I never heard of such Kind of Apps and therefore&nbsp;-&nbsp;just to be sure&nbsp;-&nbsp;I document the [Idea](600012.md) again [[2]](#16052) as a [Dings-Patent](300000030.md) under the Name [Local-Web-App-Patent](300050002.md).
 
-If such Apps become widespread, perhaps you should think on Share-Shortening of Stoks from [Google](240000009.md) or [Apple](240000003.md) and maybe better bet your [Money](6666.md) on the [Dings-System](300000007.md):
+If such Apps become widespread, perhaps you should think about Share-Shortening of Stocks from [Google](240000009.md) or [Apple](240000003.md) and maybe bet your [Money](6666.md) on the [Dings-Project](300000006.md):
 
-
+![Think Green!](400000156.jpg)
 
 ## Footnotes
 
