--- a/23.md
+++ b/23.md
@@ -2,7 +2,7 @@
 
 ## Table of Contents <a id="1"/>
 
-- [Day-116](#16000) Local-Web-App
+- [Day-116](#16000) The Local-Web-App
 - [Day-112](#12000) Theory vs. Reality
 - [Day-109](#10900) The Don't-Waste-App
 - [Day-108](#10800) Bausparen with Friends
@@ -64,7 +64,7 @@
 - [Day-4](#400) Big "Cleanup"
 - [Day-3](#300) A nasty Egg
 
-## Day-116: Local-Web-App <a id="16000"/>
+## Day-116: The Local-Web-App <a id="16000"/>
 
 #### Blog-Chain-Time 2023.10.30-00:27 in Tübingen  <a id="16001"/>
 ###### Topics: Ernst-Bloch-Choir, Local-Web-App
@@ -75,7 +75,7 @@ For our Program [Noch-und-noch-nicht-fertig-werden](2010035.md) my [Choir-Friend
 
 Since in our Choir most of the Members are not very experienced with Computers and some of them are already overwhelmed by the Download form our [Ernst-Bloch-Web-Site](2010013.md), in Order to make [Easy-Life](60173.md) with [Computers](20000003.md) possible, I upload the [Scores](90000018.md) together with the Mp3-Files to [Google-Drive](2000228.md).
 
-To save Bandwidth, [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md), I also send a short [Description](600056.md), how to make Files offline:
+To save Bandwidth, [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md), I also send a short [Description](600056.md), how to make Files offline&nbsp;-&nbsp;even if this is quit tedious:
 
 ![Save Engergy!](400000155.png)
 
