Fix Typo and change Caption

--- a/23.md
+++ b/23.md
@@ -77,7 +77,7 @@ Since in our Choir most of the Members are not very experienced with Computers a
 
 To save Bandwidth, [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md), I also send a short [Description](600056.md), how to make Files offline&nbsp;-&nbsp;even if this is quit tedious:
 
-![Save Engergy!](400000155.png)
+![Work for Energy!](400000155.png)
 
 Though this looks like an acceptable [Solution](600024.md), nevertheless [My-Bass-Colleague](1971091168.md), who is also our Web-Master, points out to me, that [Sorting](600090.md) by [Vocal-Groups](90000043.md) might meet more the [User](9000141.md)-Needs.
 
