--- a/23.md
+++ b/23.md
@@ -95,8 +95,8 @@ If such Apps become widespread, perhaps you should think about Shortening Stocks
 
 ## Footnotes
 
-[<a id="16050"/>0] [Kivy on iOS and Windows](#6100)
-[<a id="16051"/>1] [Kivy on Android](#6000)
+[<a id="16050"/>0] [Kivy on iOS and Windows](#6100) \
+[<a id="16051"/>1] [Kivy on Android](#6000) \
 [<a id="16052"/>2] [Zero-Wave-Device-Patent](#12013)
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
