--- a/23.md
+++ b/23.md
@@ -85,7 +85,7 @@ This brings me to the [Idea](600012.md) (again) to write an [App](9000168.md), w
 
 But this Time I want to write a *real* Multi-Platform-App, that *really* runs on *every* [Computer-Device](9000153.md). I had the [Idea](600012.md) already half a Year ago to use [Java-Script](9010007.md) and include all Data into a single [Html-File](9000134.md), which *easily* can be downloaded to [Local-Storage](2000230.md) and then be run in *every* [Web-Browser](9000128.md).
 
-I want to use a single File, because [Goolge](240000009.md) and [Apple](240000003.md) make it really hard for the User to install local Web-Sites with mulitple Files on their [Smart-Phones](20000005.md) or [Tablets](20000007.md)&nbsp;-&nbsp;"Honi soit qui mal y pense".
+I want to use a single File, because [Goolge](240000009.md) and [Apple](240000003.md) make it really hard for the [User](9000141.md) to install local Web-Sites with mulitple Files on their [Smart-Phones](20000005.md) or [Tablets](20000007.md)&nbsp;-&nbsp;"Honi soit qui mal y pense".
 
 Though this sounds somehow obvious, up to now I never heard of such Kind of Apps and therefore&nbsp;-&nbsp;just to be sure&nbsp;-&nbsp;I document the [Idea](600012.md) again [[2]](#16052) as a [Dings-Patent](300000030.md) under the Name [Local-Web-App-Patent](300050002.md).
 
