--- a/23.md
+++ b/23.md
@@ -108,7 +108,7 @@ Because of a lot of Traffic, I arrive a little bit late at the [Piccolo](2010033
 
 But as *really* planned, I am also pleased to see [My-Alt-Choir-Buddy](1971091160.md) and her [Friend](180000002.md) - As is known, with the Former I already worked a lot on the [Theory](7000001.md) of our [Pythagorean-Topic](1971093002.md).
 
-We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
+We sing together with our [Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
 
 Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) and of course the most beautiful One goes to our great [Singing-Sax](1971091167.md):
 
